[gd_scene load_steps=31 format=3 uid="uid://dy0w0red3u86x"]

[ext_resource type="Script" uid="uid://ha0xo4x5g63n" path="res://Player/player.gd" id="1_dm7nj"]
[ext_resource type="Texture2D" uid="uid://bwgi68s288gt" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Spritesheet.png" id="2_3mea3"]
[ext_resource type="Texture2D" uid="uid://c4b8nlexxm70k" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/idle/player-idle-1.png" id="3_7v5gs"]
[ext_resource type="Texture2D" uid="uid://du5dkf7tlwto5" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/idle/player-idle-2.png" id="4_8sa4y"]
[ext_resource type="Texture2D" uid="uid://bmnrhgho8687n" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/idle/player-idle-3.png" id="5_3nb2p"]
[ext_resource type="Texture2D" uid="uid://bmjshfr0u3cp0" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/idle/player-idle-4.png" id="6_d7xyo"]
[ext_resource type="Texture2D" uid="uid://d4a5juc7sjnv8" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/jump/player-jump-1.png" id="7_evw08"]
[ext_resource type="Texture2D" uid="uid://cbtlyqhx8ewuc" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/jump/player-jump-2.png" id="8_roy6y"]
[ext_resource type="Texture2D" uid="uid://dayy5enpftdtg" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/run/player-run-1.png" id="9_u5tep"]
[ext_resource type="Texture2D" uid="uid://bw24edtyd53wl" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/run/player-run-2.png" id="10_ps8ct"]
[ext_resource type="Texture2D" uid="uid://cu5kk8whe0fhd" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/run/player-run-3.png" id="11_7uipr"]
[ext_resource type="Texture2D" uid="uid://be4yn83ntsg4i" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/run/player-run-4.png" id="12_yifbt"]
[ext_resource type="Texture2D" uid="uid://da4yfhgyg8kdx" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/run/player-run-5.png" id="13_s0mko"]
[ext_resource type="Texture2D" uid="uid://d0itlhsqwigwk" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Players/Foxy/Sprites/run/player-run-6.png" id="14_hqjia"]
[ext_resource type="Texture2D" uid="uid://clc154fpjw24a" path="res://Guns/Rifles/Png/AK47.png" id="15_3mea3"]
[ext_resource type="Texture2D" uid="uid://bpqcpm8bu2gg3" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Props Items and VFX/fireball-hit/spritesheet.png" id="16_7v5gs"]
[ext_resource type="AudioStream" uid="uid://dubjew7yydt8d" path="res://Ak_Gunshotsound.mp3" id="17_8sa4y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x70vp"]
radius = 6.0
height = 21.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wo5nf"]
atlas = ExtResource("2_3mea3")
region = Rect2(0, 132, 34, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_croik"]
atlas = ExtResource("2_3mea3")
region = Rect2(34, 132, 34, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_bgaaw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo5nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_croik")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7v5gs")
}, {
"duration": 1.0,
"texture": ExtResource("4_8sa4y")
}, {
"duration": 1.0,
"texture": ExtResource("5_3nb2p")
}, {
"duration": 1.0,
"texture": ExtResource("6_d7xyo")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_evw08")
}, {
"duration": 1.0,
"texture": ExtResource("8_roy6y")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_u5tep")
}, {
"duration": 1.0,
"texture": ExtResource("10_ps8ct")
}, {
"duration": 1.0,
"texture": ExtResource("11_7uipr")
}, {
"duration": 1.0,
"texture": ExtResource("12_yifbt")
}, {
"duration": 1.0,
"texture": ExtResource("13_s0mko")
}, {
"duration": 1.0,
"texture": ExtResource("14_hqjia")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_8sa4y"]
resource_name = "Death"

[sub_resource type="Animation" id="Animation_d7xyo"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_dm7nj"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7v5gs"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3nb2p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3mea3"]
resource_name = "Run"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7xyo"]
_data = {
&"Death": SubResource("Animation_8sa4y"),
&"Fall": SubResource("Animation_d7xyo"),
&"Idle": SubResource("Animation_dm7nj"),
&"Jump": SubResource("Animation_7v5gs"),
&"RESET": SubResource("Animation_3nb2p"),
&"Run": SubResource("Animation_3mea3")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_8sa4y"]
atlas = ExtResource("16_7v5gs")
region = Rect2(0, 0, 29, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_3nb2p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sa4y")
}],
"loop": true,
"name": &"Flash",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_dm7nj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_x70vp")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -5)
sprite_frames = SubResource("SpriteFrames_bgaaw")
animation = &"Idle"
frame = 1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.6, 1.6)
limit_left = 0
limit_top = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d7xyo")
}
autoplay = "Idle"

[node name="AKGun" type="Node2D" parent="."]
visible = false
position = Vector2(1, -5)

[node name="Sprite2D" type="Sprite2D" parent="AKGun"]
position = Vector2(20, 8)
scale = Vector2(0.568182, 0.769231)
texture = ExtResource("15_3mea3")

[node name="Muzzle" type="Marker2D" parent="AKGun"]
position = Vector2(33, 7)

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="AKGun/Muzzle"]
visible = false
position = Vector2(0.999998, 0)
scale = Vector2(0.103448, 0.0925926)
sprite_frames = SubResource("SpriteFrames_3nb2p")
animation = &"Flash"
frame_progress = 0.468413

[node name="Ak_Gunshotsound" type="AudioStreamPlayer2D" parent="AKGun/Muzzle"]
stream = ExtResource("17_8sa4y")

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="FireCooldown" to="." method="_on_FireCooldown_timeout"]
